Terraform/main.tf
provider "aws"{
    region = "eu-west-1"
} 
resource "aws_security_group" "formxpress_sg" {
  name_prefix = "formxpress-sg-"

  ingress {
    description = "Allow HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Allow SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
